TODO
* tests
  - string to identifier utf16
  - string to identifier utf32
  - identifier to byte stream
* add support for retrieving identifier values
  - add test

20130224
* updated dependencies
* 2013 update
* removed codegear files

20121028
* worked on parse GUID/UUID from string function

20121021
* change for format flag names

20120920
* updated dependencies

20120701
* updated dependencies

20120630
* updated dependencies

20120523
* changes for project move

20120507
* updated dependencies

20120426
* fixes for pkg-config detection of libraries

20120422
* changed byte order to int

20120418
* added format flags

20120417
* updated dependencies
* added with index functions

20120408
* updated dependencies

20120407
* updated dependencies

20120406
* updated dependencies

20120314
* worked on adding tests
* code clean up
* updated include header
* updated man page

20120312
* Created stand-alone version of version used in liblnk
