@@ -103,3 +103,4 @@ Makefile.in
 
 # Local library dependencies specific files
 /libcerror
+/libcstring
