@@ -1,0 +1,12 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: libfguid
+Description: Library to support the GUID/UUID format
+Version: @VERSION@
+Libs: -L${libdir} -lfguid
+Libs.private: @ax_libcerror_libs_private@ @ax_libcstring_libs_private@
+Cflags: -I${includedir}
+
