@@ -28,7 +28,7 @@ BEGIN
       VALUE "OriginalFilename",		"libfguid.dll\0"
       VALUE "ProductName",		"libfguid\0"
       VALUE "ProductVersion",		"@VERSION@" "\0"
-      VALUE "Comments",			"For more information visit http://code.google.com/p/libflibs/\0"
+      VALUE "Comments",			"For more information visit http://code.google.com/p/libfguid/\0"
     END
   END
   BLOCK "VarFileInfo"
